src/com/fcl/compiler/antlr4/FCLParser.java
package com.fcl.compiler.antlr4;
// Generated from grammar/FCL.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FCLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, Identifier=59, 
		NORMALSTRING=60, CHARSTRING=61, LONGSTRING=62, INT=63, HEX=64, FLOAT=65, 
		HEX_FLOAT=66, COMMENT=67, LINE_COMMENT=68, WS=69, SHEBANG=70;
	public static final int
		RULE_chunk = 0, RULE_block = 1, RULE_stat = 2, RULE_procedure = 3, RULE_procedurecall = 4, 
		RULE_objlist = 5, RULE_attr = 6, RULE_varlist = 7, RULE_retstat = 8, RULE_explist = 9, 
		RULE_printexp = 10, RULE_exp = 11, RULE_operatorOr = 12, RULE_operatorAnd = 13, 
		RULE_operatorComparison = 14, RULE_operatorStrcat = 15, RULE_operatorAddSub = 16, 
		RULE_operatorMulDivMod = 17, RULE_operatorUnary = 18, RULE_operatorPower = 19, 
		RULE_numberdt = 20, RULE_booleandt = 21, RULE_stringdt = 22, RULE_positiondt = 23, 
		RULE_objectdt = 24, RULE_listdt = 25;
	public static final String[] ruleNames = {
		"chunk", "block", "stat", "procedure", "procedurecall", "objlist", "attr", 
		"varlist", "retstat", "explist", "printexp", "exp", "operatorOr", "operatorAnd", 
		"operatorComparison", "operatorStrcat", "operatorAddSub", "operatorMulDivMod", 
		"operatorUnary", "operatorPower", "numberdt", "booleandt", "stringdt", 
		"positiondt", "objectdt", "listdt"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'break'", "'while'", "'do'", "':'", "'end'", "'for'", "'='", 
		"'step'", "'foreach'", "'as'", "'if'", "'then'", "'elseif'", "'else'", 
		"'move'", "'from'", "'to'", "'pickup'", "'pippets'", "'discard'", "'procedure'", 
		"'('", "')'", "'uses'", "'run'", "'with'", "','", "'var'", "'return'", 
		"'print'", "'nil'", "'or'", "'and'", "'<'", "'>'", "'<='", "'>='", "'!='", 
		"'=='", "'..'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'^'", "'true'", 
		"'false'", "'['", "'~'", "']'", "'Sample'", "'Plate'", "'Rack'", "'{'", 
		"'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "Identifier", 
		"NORMALSTRING", "CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT", 
		"COMMENT", "LINE_COMMENT", "WS", "SHEBANG"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FCL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FCLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ChunkContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FCLParser.EOF, 0); }
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chunk);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			block();
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public RetstatContext retstat() {
			return getRuleContext(RetstatContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__6) | (1L << T__9) | (1L << T__11) | (1L << T__15) | (1L << T__18) | (1L << T__20) | (1L << T__21) | (1L << T__25) | (1L << T__28) | (1L << T__30) | (1L << Identifier))) != 0)) {
				{
				{
				setState(55);
				stat();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			_la = _input.LA(1);
			if (_la==T__29) {
				{
				setState(61);
				retstat();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfStatContext extends StatContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public IfStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitIfStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AttrStatContext extends StatContext {
		public AttrContext attr() {
			return getRuleContext(AttrContext.class,0);
		}
		public AttrStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitAttrStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MoveStatContext extends StatContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public MoveStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitMoveStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DiscardStatContext extends StatContext {
		public DiscardStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitDiscardStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintexpStatContext extends StatContext {
		public PrintexpContext printexp() {
			return getRuleContext(PrintexpContext.class,0);
		}
		public PrintexpStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitPrintexpStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForeachStatContext extends StatContext {
		public List<TerminalNode> Identifier() { return getTokens(FCLParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(FCLParser.Identifier, i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ListdtContext listdt() {
			return getRuleContext(ListdtContext.class,0);
		}
		public ForeachStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitForeachStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PickupStatContext extends StatContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public PickupStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitPickupStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ProcedureStatContext extends StatContext {
		public ProcedureContext procedure() {
			return getRuleContext(ProcedureContext.class,0);
		}
		public ProcedureStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitProcedureStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BreakStatContext extends StatContext {
		public BreakStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitBreakStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SemicolonStatContext extends StatContext {
		public SemicolonStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitSemicolonStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForStatContext extends StatContext {
		public TerminalNode Identifier() { return getToken(FCLParser.Identifier, 0); }
		public PositiondtContext positiondt() {
			return getRuleContext(PositiondtContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public NumberdtContext numberdt() {
			return getRuleContext(NumberdtContext.class,0);
		}
		public ForStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitForStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ProcedurecallStatContext extends StatContext {
		public ProcedurecallContext procedurecall() {
			return getRuleContext(ProcedurecallContext.class,0);
		}
		public ProcedurecallStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitProcedurecallStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileStatContext extends StatContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitWhileStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		int _la;
		try {
			setState(139);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new SemicolonStatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				match(T__0);
				}
				break;
			case 2:
				_localctx = new BreakStatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				match(T__1);
				}
				break;
			case 3:
				_localctx = new WhileStatContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				match(T__2);
				setState(67);
				exp(0);
				setState(68);
				match(T__3);
				setState(69);
				match(T__4);
				setState(70);
				block();
				setState(71);
				match(T__5);
				}
				break;
			case 4:
				_localctx = new ForStatContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				match(T__6);
				setState(74);
				match(Identifier);
				setState(75);
				match(T__7);
				setState(76);
				positiondt();
				setState(79);
				_la = _input.LA(1);
				if (_la==T__8) {
					{
					setState(77);
					match(T__8);
					setState(78);
					numberdt();
					}
				}

				setState(81);
				match(T__3);
				setState(82);
				match(T__4);
				setState(83);
				block();
				setState(84);
				match(T__5);
				}
				break;
			case 5:
				_localctx = new ForeachStatContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				match(T__9);
				setState(87);
				match(Identifier);
				setState(90);
				_la = _input.LA(1);
				if (_la==T__7) {
					{
					setState(88);
					match(T__7);
					setState(89);
					listdt();
					}
				}

				setState(92);
				match(T__10);
				setState(93);
				match(Identifier);
				setState(94);
				match(T__3);
				setState(95);
				match(T__4);
				setState(96);
				block();
				setState(97);
				match(T__5);
				}
				break;
			case 6:
				_localctx = new IfStatContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(99);
				match(T__11);
				setState(100);
				exp(0);
				setState(101);
				match(T__12);
				setState(102);
				match(T__4);
				setState(103);
				block();
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__13) {
					{
					{
					setState(104);
					match(T__13);
					setState(105);
					exp(0);
					setState(106);
					match(T__12);
					setState(107);
					match(T__4);
					setState(108);
					block();
					}
					}
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(118);
				_la = _input.LA(1);
				if (_la==T__14) {
					{
					setState(115);
					match(T__14);
					setState(116);
					match(T__4);
					setState(117);
					block();
					}
				}

				setState(120);
				match(T__5);
				}
				break;
			case 7:
				_localctx = new ProcedurecallStatContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(122);
				procedurecall();
				}
				break;
			case 8:
				_localctx = new ProcedureStatContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(123);
				procedure();
				}
				break;
			case 9:
				_localctx = new AttrStatContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(124);
				attr();
				}
				break;
			case 10:
				_localctx = new PrintexpStatContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(125);
				printexp();
				}
				break;
			case 11:
				_localctx = new MoveStatContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(126);
				match(T__15);
				setState(127);
				match(T__16);
				setState(128);
				exp(0);
				setState(129);
				match(T__17);
				setState(130);
				exp(0);
				}
				break;
			case 12:
				_localctx = new PickupStatContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(132);
				match(T__18);
				setState(133);
				exp(0);
				setState(134);
				match(T__19);
				setState(135);
				match(T__16);
				setState(136);
				exp(0);
				}
				break;
			case 13:
				_localctx = new DiscardStatContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(138);
				match(T__20);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(FCLParser.Identifier, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public ObjlistContext objlist() {
			return getRuleContext(ObjlistContext.class,0);
		}
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitProcedure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureContext procedure() throws RecognitionException {
		ProcedureContext _localctx = new ProcedureContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_procedure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__21);
			setState(142);
			match(Identifier);
			setState(143);
			match(T__22);
			setState(145);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << Identifier))) != 0)) {
				{
				setState(144);
				varlist();
				}
			}

			setState(147);
			match(T__23);
			setState(150);
			_la = _input.LA(1);
			if (_la==T__24) {
				{
				setState(148);
				match(T__24);
				setState(149);
				objlist();
				}
			}

			setState(152);
			match(T__4);
			setState(153);
			block();
			setState(154);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedurecallContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(FCLParser.Identifier, 0); }
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public ProcedurecallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedurecall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitProcedurecall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedurecallContext procedurecall() throws RecognitionException {
		ProcedurecallContext _localctx = new ProcedurecallContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_procedurecall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_la = _input.LA(1);
			if (_la==T__25) {
				{
				setState(156);
				match(T__25);
				}
			}

			setState(159);
			match(Identifier);
			setState(160);
			match(T__22);
			setState(162);
			_la = _input.LA(1);
			if (((((_la - 26)) & ~0x3f) == 0 && ((1L << (_la - 26)) & ((1L << (T__25 - 26)) | (1L << (T__31 - 26)) | (1L << (T__46 - 26)) | (1L << (T__48 - 26)) | (1L << (T__49 - 26)) | (1L << (T__50 - 26)) | (1L << (T__53 - 26)) | (1L << (T__54 - 26)) | (1L << (T__55 - 26)) | (1L << (T__56 - 26)) | (1L << (Identifier - 26)) | (1L << (NORMALSTRING - 26)) | (1L << (CHARSTRING - 26)) | (1L << (LONGSTRING - 26)) | (1L << (INT - 26)) | (1L << (HEX - 26)) | (1L << (FLOAT - 26)) | (1L << (HEX_FLOAT - 26)))) != 0)) {
				{
				setState(161);
				explist();
				}
			}

			setState(164);
			match(T__23);
			setState(167);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(165);
				match(T__26);
				setState(166);
				varlist();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjlistContext extends ParserRuleContext {
		public List<ObjectdtContext> objectdt() {
			return getRuleContexts(ObjectdtContext.class);
		}
		public ObjectdtContext objectdt(int i) {
			return getRuleContext(ObjectdtContext.class,i);
		}
		public List<TerminalNode> Identifier() { return getTokens(FCLParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(FCLParser.Identifier, i);
		}
		public ObjlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objlist; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitObjlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjlistContext objlist() throws RecognitionException {
		ObjlistContext _localctx = new ObjlistContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_objlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			objectdt();
			setState(170);
			match(T__10);
			setState(171);
			match(Identifier);
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__27) {
				{
				{
				setState(172);
				match(T__27);
				setState(173);
				objectdt();
				setState(174);
				match(T__10);
				setState(175);
				match(Identifier);
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttrContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(FCLParser.Identifier, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public AttrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FCLVisitor ) return ((FCLVisitor<? extends T>)visitor).visitAttr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttrContext attr() throws RecognitionException {
		AttrContext _localctx = new AttrContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_attr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_la = _input.LA(1);
			if (_la==T__28) {
				{
				setState(182);
				match(T__28);
				}
			}

			setState(185);
			match(Identifier);
			setState(186);
			match(T__7);
			setState(187);
			exp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
